lookatthedocs/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs
-d
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java
<---- end of javadoc command ---->
Loading source file C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java...
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: illegal start of type
   this this this this this this this this this this this this this
   ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: ';' expected
   this this this this this this this this this this this this this
       ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: illegal start of type
   this this this this this this this this this this this this this
             ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: <identifier> expected
   this this this this this this this this this this this this this
                 ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: ';' expected
   this this this this this this this this this this this this this
                      ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: illegal start of type
   this this this this this this this this this this this this this
                            ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: <identifier> expected
   this this this this this this this this this this this this this
                                ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: ';' expected
   this this this this this this this this this this this this this
                                     ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: illegal start of type
   this this this this this this this this this this this this this
                                           ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: <identifier> expected
   this this this this this this this this this this this this this
                                               ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: ';' expected
   this this this this this this this this this this this this this
                                                    ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: illegal start of type
   this this this this this this this this this this this this this
                                                          ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: <identifier> expected
   this this this this this this this this this this this this this
                                                              ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:3: error: ';' expected
   this this this this this this this this this this this this this
                                                                   ^
C:\Users\jchen4\Desktop\GitHub\unit2Classes\lookatthedocs\asdf.java:4: error: reached end of file while parsing
}
 ^
15 errors
